@@ -1,3 +1,8 @@
+2015-09-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/generic.c:
+	  More testcases for _Generic.
+
 2015-09-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/peep.c:
